--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: Sail in the ocean of Tech.
+description: Sharing is progress
 ---
 
 {% include header.html %}
