--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: Sail in the ocean of Tech.
-description: Sharing is progress
+home-title: 站长在这里分享技术和一些腻歪的东西.
+description: 畅所欲言
 ---
 
 {% include header.html %}
